# anki-md-sync

./: Cargo.toml  LICENSE  README.md
src/: config.rs  lib.rs  main.rs
test/: notes.md
