[package]
name = "anki-md-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.0", features = ["json"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
markdown = "0.3.0"
clap = { version = "4.5.3", features = ["derive", "cargo"] }
log = "0.4.21"
env_logger = "0.11.3"
